<resources>
    <string name="app_name">StudentProfiles</string>
    <string name="btn_sync">Start Sync</string>
    <string name="cd_detail_iv_background">Academy background image</string>
    <string name="cd_detail_iv_portrait">Student\'s portrait image</string>
    <string name="cd_detail_iv_school">School icon</string>
    <string name="cd_detail_iv_weapon">Student\'s weapon image</string>
    <string name="cd_list_iv_empty">Empty state icon</string>
    <string name="cd_sync_iv_hero">Application icon</string>
    <string name="hint_search_bar">Search students</string>
    <string name="hint_search_view">Search by name</string>
    <string name="info_list_empty">There are no data to show here, please revise your search or filter query</string>
    <string name="info_list_filtered">Showing filtered students</string>
    <string name="info_list_unfiltered">Showing all students</string>
    <string name="info_sync_failed">Sync failed : %s</string>
    <string name="info_sync_starting">Starting sync…</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_basic_info">Basic Info</string>
    <string name="lbl_birthday">Birthday</string>
    <string name="lbl_character_voice">CV.</string>
    <string name="lbl_designer">Design</string>
    <string name="lbl_detail_swipe_down">Swipe down to see student\'s profile</string>
    <string name="lbl_detail_swipe_up">Swipe up to see student\'s basic detail</string>
    <string name="lbl_filter_atk_type">Attack type</string>
    <string name="lbl_filter_def_type">Defense type</string>
    <string name="lbl_filter_position">Position</string>
    <string name="lbl_filter_role">Role</string>
    <string name="lbl_filter_school">Academy</string>
    <string name="lbl_filter_server">Game server</string>
    <string name="lbl_filter_squad_type">Squad type</string>
    <string name="lbl_filter_weapon_type">Weapon used</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_hobbies">Hobbies</string>
    <string name="lbl_illustrator">Illustrator</string>
    <string name="lbl_reset_filter">Reset Filter</string>
    <string name="menu_filter">Filter</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_sync">Sync</string>
    <string name="prefs_run_sync">Run sync now</string>
    <string name="prefs_run_sync_summary">Synchronize to reload students data</string>
    <string name="prefs_sync_interval">Sync interval</string>
    <string name="prefs_sync_interval_1_month">Every month</string>
    <string name="prefs_sync_interval_1_week">Every week</string>
    <string name="prefs_sync_interval_2_week">Every 2 weeks</string>
    <string name="prefs_theme">App theme</string>
    <string name="prefs_theme_dark">Dark</string>
    <string name="prefs_theme_light">Light</string>
    <string name="prefs_theme_system">Follow system</string>
    <string name="subtitle_sync_progress">Please wait until sync is finished.</string>
    <string name="subtitle_welcome">Before you start viewing students profile, you need to synchronize the data. Please click the button below to start syncing students data from SchaleDB.</string>
    <string name="title_detail">Student Info</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_filter">Filter</string>
    <string name="title_list_empty">List empty</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_sort_by">Sort by</string>
    <string name="title_sync_progress">Syncing data</string>
    <string name="title_welcome">Welcome to Student Profile</string>
</resources>
