<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        style="@style/Widget.Material3.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_filter"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceTitleMedium"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/filter_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="2"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/lbl_filter_server"
                android:textAppearance="?textAppearanceBodySmall"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_is_global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="0dp"
                app:chipSpacingVertical="0dp"
                app:selectionRequired="true"
                app:singleSelection="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/lbl_filter_squad_type"
                android:textAppearance="?textAppearanceBodySmall"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_squad_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="0dp"
                app:chipSpacingVertical="0dp"
                app:singleSelection="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/lbl_filter_position"
                android:textAppearance="?textAppearanceBodySmall"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="0dp"
                app:chipSpacingVertical="0dp"
                app:selectionRequired="true"
                app:singleSelection="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/lbl_filter_role"
                android:textAppearance="?textAppearanceBodySmall"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView android:layout_columnSpan="2">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="0dp"
                    app:chipSpacingVertical="0dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/lbl_filter_atk_type"
                android:textAppearance="?textAppearanceBodySmall"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView android:layout_columnSpan="2">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_atk_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="0dp"
                    app:chipSpacingVertical="0dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/lbl_filter_def_type"
                android:textAppearance="?textAppearanceBodySmall"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView android:layout_columnSpan="2">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_def_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="0dp"
                    app:chipSpacingVertical="0dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/lbl_filter_weapon_type"
                android:textAppearance="?textAppearanceBodySmall"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView android:layout_columnSpan="2">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_weapon_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="0dp"
                    app:chipSpacingVertical="0dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/lbl_filter_school"
                android:textAppearance="?textAppearanceBodySmall"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView android:layout_columnSpan="2">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="0dp"
                    app:chipSpacingVertical="0dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true" />
            </HorizontalScrollView>
        </GridLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/lbl_reset_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_grid" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
