<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_swipe_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lbl_detail_swipe_up"
        android:textAppearance="?textAppearanceLabelSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_photo"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_swipe_up"
        app:shapeAppearanceOverlay="?shapeAppearanceCornerLarge"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="?textAppearanceTitleMedium"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_photo"
        app:layout_constraintTop_toTopOf="@id/iv_photo"
        tools:text="Aikiyo Fuuka" />

    <TextView
        android:id="@+id/tv_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="?textAppearanceBodySmall"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_full_name"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name"
        tools:text="Gehenna Academy" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_student_year"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="?colorTertiaryContainer"
        app:layout_constraintStart_toStartOf="@id/tv_full_name"
        app:layout_constraintTop_toBottomOf="@id/tv_school"
        app:strokeColor="@android:color/transparent">

        <TextView
            android:id="@+id/tv_school_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="8dp"
            android:textAppearance="?textAppearanceLabelMedium"
            android:textColor="?colorOnTertiaryContainer"
            tools:text="2nd Year" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_club"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="?textAppearanceBodySmall"
        app:layout_constraintStart_toStartOf="@id/tv_full_name"
        app:layout_constraintTop_toBottomOf="@id/card_student_year"
        tools:text="School Lunch Club" />

    <GridLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/iv_photo">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/lbl_character_voice"
            android:textAppearance="?textAppearanceLabelSmall" />

        <TextView
            android:id="@+id/tv_character_voice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="Ai Fairouz" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/lbl_birthday"
            android:textAppearance="?textAppearanceLabelSmall" />

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="April 30th" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/lbl_age"
            android:textAppearance="?textAppearanceLabelSmall" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="16 years old" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/lbl_height"
            android:textAppearance="?textAppearanceLabelSmall" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="159cm" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/lbl_designer"
            android:textAppearance="?textAppearanceLabelSmall" />

        <TextView
            android:id="@+id/tv_design"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="7peach" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/lbl_ilustrator"
            android:textAppearance="?textAppearanceLabelSmall" />

        <TextView
            android:id="@+id/tv_illustrator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="7peach" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/lbl_hobbies"
            android:textAppearance="?textAppearanceLabelSmall" />

        <TextView
            android:id="@+id/tv_hobbies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:textAlignment="textEnd"
            android:layout_gravity="fill_horizontal"
            android:gravity="start"
            android:textStyle="bold"
            tools:text="Making home-cooked meals, packing bento lunches" />
    </GridLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_info" />

    <TextView
        android:id="@+id/lbl_basic_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_basic_info"
        android:textAppearance="?textAppearanceLabelSmall"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tv_basic_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="?textAppearanceBodyMedium"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/lbl_basic_info"
        tools:text="Fuuka is dressed up in a kimono for the New Year.\n\nShe is hoping for peaceful days in the upcoming year, but given her surroundings, that doesn&#x27;t seem likely." />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_weapon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="?colorSurfaceContainer"
        app:layout_constraintTop_toBottomOf="@id/tv_basic_info"
        app:strokeColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_weapon_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="SMG" />

            <ImageView
                android:id="@+id/iv_weapon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_weapon_type"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
